<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestPortal">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requestPortal"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/checkIncomingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/checkIncomingButton"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/checkIncoming"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/checkSentButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <Button
        android:id="@+id/checkSentButton"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/checkSent"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/checkGroupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkIncomingButton" />

    <Button
        android:id="@+id/checkGroupButton"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/groupStatus"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkSentButton" />
</android.support.constraint.ConstraintLayout>